# rag-experiments

./: .env.example  .gitignore  README.md  docker-compose.yml  init.sql  init_article_chunks.sql  pyproject.toml
scripts/: README.md  __init__.py  check_table_sizes.py  compose_down.py  compose_up.py  download_arxiv.py  download_books.py  download_news.py  download_wikipedia.py  evaluate_chunk_based_retrieval.py  evaluate_retrieval.py  generate_questions.py  ingest_wikipedia.py  ingest_wikipedia_article_chunks.py  setup.py  start_metal_ollamas.sh  stop_metal_ollamas.sh
src/: __init__.py  database.py
